--- a/dokumentointi/pit/201501301659/kalastajapeli.peli/index.html
+++ b/dokumentointi/pit/201501301659/kalastajapeli.peli/index.html
@@ -39,7 +39,7 @@
    .coverage_ledgend {
         position : absolute;
         height : 100%;
-        width : 100%;
+        width: 100%;
         left : 0;
         top : 0;
         text-align : center;
@@ -50,9 +50,9 @@
    }
    
    .coveragePercentage {
-    display: inline-block;
-    width: 3em;
-    text-align: right;
+        display: inline-block;
+        width: 3em;
+        text-align: right;
    }
   </style>
   
@@ -60,8 +60,8 @@
 <body>
 
 <h1>Pit Test Coverage Report</h1>
-
-<h3>Project Summary</h3>
+<h2>Package Summary</h2>
+<h3>kalastajapeli.peli</h3>
 <table>
     <thead>
         <tr>
@@ -73,19 +73,18 @@
     <tbody>
         <tr>
             <td>1</td>
-            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/12</div></div></td>
-            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/6</div></div></td>
+            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/30</div></div></td>
+            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/13</div></div></td>
         </tr>
     </tbody>
 </table>
 
 
-<h3>Breakdown by Package</h3>
+<h3>Breakdown by Class</h3>
 <table>
     <thead>
         <tr>
             <th>Name</th>
-            <th>Number of Classes</th>
             <th>Line Coverage</th>
             <th>Mutation Coverage</th>
         </tr>
@@ -93,10 +92,9 @@
     <tbody>
 
         <tr>
-            <td><a href="./kalastajapeli.kalastajapeli/index.html">kalastajapeli.kalastajapeli</a></td>
-            <td>1</td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/12</div></div></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/6</div></div></td>
+            <td><a href="./Kalastajapeli.java.html">Kalastajapeli.java</a></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/30</div></div></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/13</div></div></td>
         </tr>
 
      </tbody>
