--- a/dokumentointi/pit/201502051433/kalastajapeli.domain/index.html
+++ b/dokumentointi/pit/201502051433/kalastajapeli.domain/index.html
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>2</td>
-            <td>75% <div class="coverage_bar"><div class="coverage_complete" style="width:75%"></div><div class="coverage_ledgend">18/24</div></div></td>
-            <td>54% <div class="coverage_bar"><div class="coverage_complete" style="width:54%"></div><div class="coverage_ledgend">7/13</div></div></td>
+            <td>4</td>
+            <td>100% <div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">46/46</div></div></td>
+            <td>100% <div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">21/21</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -92,9 +92,21 @@
     <tbody>
 
         <tr>
+            <td><a href="./Kala.java.html">Kala.java</a></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">8/8</div></div></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">1/1</div></div></td>
+        </tr>
+
+        <tr>
             <td><a href="./Kalastaja.java.html">Kalastaja.java</a></td>
-            <td><div class="coveragePercentage">63% </div><div class="coverage_bar"><div class="coverage_complete" style="width:63%"></div><div class="coverage_ledgend">10/16</div></div></td>
-            <td><div class="coveragePercentage">14% </div><div class="coverage_bar"><div class="coverage_complete" style="width:14%"></div><div class="coverage_ledgend">1/7</div></div></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">20/20</div></div></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">11/11</div></div></td>
+        </tr>
+
+        <tr>
+            <td><a href="./Kenka.java.html">Kenka.java</a></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">10/10</div></div></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">3/3</div></div></td>
         </tr>
 
         <tr>
