--- a/dokumentointi/pit/201502051433/kalastajapeli.kalastajapeli/App.java.html
+++ b/dokumentointi/pit/201502051433/kalastajapeli.kalastajapeli/App.java.html
@@ -55,11 +55,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_1'/>
 1
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_1'></a>
 </td>
 <td class=''><pre><span  class=''>package kalastajapeli.kalastajapeli;</span></pre></td></tr>
 
@@ -67,11 +67,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_2'/>
 2
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_2'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -79,11 +79,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_3'/>
 3
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_3'></a>
 </td>
 <td class=''><pre><span  class=''>import javax.swing.SwingUtilities;</span></pre></td></tr>
 
@@ -91,11 +91,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_4'/>
 4
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_4'></a>
 </td>
 <td class=''><pre><span  class=''>import kalastajapeli.gui.Kayttoliittyma;</span></pre></td></tr>
 
@@ -103,11 +103,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_5'/>
 5
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_5'></a>
 </td>
 <td class=''><pre><span  class=''>import kalastajapeli.peli.Kalastajapeli;</span></pre></td></tr>
 
@@ -115,11 +115,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_6'/>
 6
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_6'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -127,11 +127,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_7'/>
 7
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_7'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>public class App {</span></pre></td></tr>
 
@@ -139,11 +139,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_8'/>
 8
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_8'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -151,11 +151,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_9'/>
 9
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_9'></a>
 </td>
 <td class=''><pre><span  class=''>    public static void main(String[] args) {</span></pre></td></tr>
 
@@ -163,23 +163,23 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_10'/>
 10
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_10'></a>
 </td>
-<td class='uncovered'><pre><span  class=''>        Kalastajapeli peli = new Kalastajapeli(20, 20);</span></pre></td></tr>
+<td class='uncovered'><pre><span  class=''>        Kalastajapeli peli = new Kalastajapeli(30, 20);</span></pre></td></tr>
 
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_11'/>
 11
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_11'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -187,35 +187,47 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_12'/>
 12
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_12'></a>
 </td>
-<td class='uncovered'><pre><span  class=''>        Kayttoliittyma liittyma = new Kayttoliittyma(peli, 20);</span></pre></td></tr>
+<td class='uncovered'><pre><span  class=''>        Kayttoliittyma liittyma = new Kayttoliittyma(peli, 30);</span></pre></td></tr>
 
 
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_13'/>
 13
 </td>
 <td class='survived'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_13'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_13'>1</a>
 </td>
 <td class='uncovered'><pre><span  class='survived'>        SwingUtilities.invokeLater(liittyma);</span></pre></td></tr>
 
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_14'/>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_14'/>
 14
 </td>
+<td class=''>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_14'></a>
+</td>
+<td class=''><pre><span  class=''>        </span></pre></td></tr>
+
+
+
+<tr>
+<td class='uncovered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_15'/>
+15
+</td>
 <td class='survived'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_14'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_15'>1</a>
 </td>
 <td class='uncovered'><pre><span  class='survived'>        while (liittyma.getPaivitettava() == null) {</span></pre></td></tr>
 
@@ -223,11 +235,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_15'/>
-15
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_16'/>
+16
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_16'></a>
 </td>
 <td class=''><pre><span  class=''>            try {</span></pre></td></tr>
 
@@ -235,11 +247,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_16'/>
-16
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_17'/>
+17
 </td>
 <td class='survived'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_16'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_17'>1</a>
 </td>
 <td class='uncovered'><pre><span  class='survived'>                Thread.sleep(100);</span></pre></td></tr>
 
@@ -247,11 +259,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_17'/>
-17
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_18'/>
+18
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_18'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>            } catch (InterruptedException e) {</span></pre></td></tr>
 
@@ -259,11 +271,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_18'/>
-18
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_19'/>
+19
 </td>
 <td class='survived'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_18'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_19'>1</a>
 </td>
 <td class='uncovered'><pre><span  class='survived'>                System.out.println(&#34;Piirtoalustaa ei ole viel&#195;&#164; luotu.&#34;);</span></pre></td></tr>
 
@@ -271,11 +283,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_19'/>
-19
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_20'/>
+20
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_19'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_20'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>            }</span></pre></td></tr>
 
@@ -283,23 +295,35 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_20'/>
-20
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_21'/>
+21
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_20'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_21'></a>
 </td>
 <td class=''><pre><span  class=''>        }</span></pre></td></tr>
 
 
 
 <tr>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_22'/>
+22
+</td>
+<td class=''>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_22'></a>
+</td>
+<td class=''><pre><span  class=''>        </span></pre></td></tr>
+
+
+
+<tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_21'/>
-21
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_23'/>
+23
 </td>
 <td class='survived'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_21'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_23'>1</a>
 </td>
 <td class='uncovered'><pre><span  class='survived'>        peli.setPaivitettava(liittyma.getPaivitettava());</span></pre></td></tr>
 
@@ -307,11 +331,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_22'/>
-22
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_24'/>
+24
 </td>
 <td class='survived'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_22'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_24'>1</a>
 </td>
 <td class='uncovered'><pre><span  class='survived'>        peli.start();</span></pre></td></tr>
 
@@ -319,11 +343,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_23'/>
-23
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_25'/>
+25
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_23'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_25'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -331,11 +355,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@55c49e24_24'/>
-24
+<a name='org.pitest.mutationtest.report.html.SourceFile@5beacb6b_26'/>
+26
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_24'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_26'></a>
 </td>
 <td class=''><pre><span  class=''>}</span></pre></td></tr>
 
@@ -346,66 +370,66 @@ padding-left: 5px;
 
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@55c49e24_13'>13</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5beacb6b_13'>13</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_13'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_13'/> 
 
 <p class='NO_COVERAGE'>removed call to javax/swing/SwingUtilities::invokeLater : NO_COVERAGE</p> 
 </td>
 </tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@55c49e24_14'>14</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5beacb6b_15'>15</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_14'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_15'/> 
 
 <p class='NO_COVERAGE'>negated conditional : NO_COVERAGE</p> 
 </td>
 </tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@55c49e24_16'>16</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5beacb6b_17'>17</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_16'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_17'/> 
 
 <p class='NO_COVERAGE'>removed call to java/lang/Thread::sleep : NO_COVERAGE</p> 
 </td>
 </tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@55c49e24_18'>18</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5beacb6b_19'>19</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_18'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_19'/> 
 
 <p class='NO_COVERAGE'>removed call to java/io/PrintStream::println : NO_COVERAGE</p> 
 </td>
 </tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@55c49e24_21'>21</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5beacb6b_23'>23</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_21'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_23'/> 
 
 <p class='NO_COVERAGE'>removed call to kalastajapeli/peli/Kalastajapeli::setPaivitettava : NO_COVERAGE</p> 
 </td>
 </tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@55c49e24_22'>22</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5beacb6b_24'>24</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@55c49e24_22'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5beacb6b_24'/> 
 
 <p class='NO_COVERAGE'>removed call to kalastajapeli/peli/Kalastajapeli::start : NO_COVERAGE</p> 
 </td>
