pomin korjaus, lisaa testeja ja uusi pit

--- a/dokumentointi/pit/201502052216/kalastajapeli.domain/Pala.java.html
+++ b/dokumentointi/pit/201502052216/kalastajapeli.domain/Pala.java.html
@@ -55,11 +55,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_1'/>
 1
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_1'></a>
 </td>
 <td class=''><pre><span  class=''>package kalastajapeli.domain;</span></pre></td></tr>
 
@@ -67,11 +67,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_2'/>
 2
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_2'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -79,11 +79,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_3'/>
 3
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_3'></a>
 </td>
 <td class=''><pre><span  class=''>public class Pala {</span></pre></td></tr>
 
@@ -91,11 +91,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_4'/>
 4
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_4'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -103,11 +103,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_5'/>
 5
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_5'></a>
 </td>
 <td class=''><pre><span  class=''>    int x;</span></pre></td></tr>
 
@@ -115,11 +115,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_6'/>
 6
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_6'></a>
 </td>
 <td class=''><pre><span  class=''>    int y;</span></pre></td></tr>
 
@@ -127,11 +127,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_7'/>
 7
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_7'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -139,11 +139,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_8'/>
 8
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_8'></a>
 </td>
 <td class='covered'><pre><span  class=''>    public Pala(int x, int y) {</span></pre></td></tr>
 
@@ -151,11 +151,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_9'/>
 9
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_9'></a>
 </td>
 <td class='covered'><pre><span  class=''>        this.x = x;</span></pre></td></tr>
 
@@ -163,11 +163,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_10'/>
 10
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_10'></a>
 </td>
 <td class='covered'><pre><span  class=''>        this.y = y;</span></pre></td></tr>
 
@@ -175,11 +175,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_11'/>
 11
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_11'></a>
 </td>
 <td class='covered'><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -187,11 +187,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_12'/>
 12
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_12'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -199,11 +199,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_13'/>
 13
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_13'></a>
 </td>
 <td class=''><pre><span  class=''>    public int getX() {</span></pre></td></tr>
 
@@ -211,11 +211,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_14'/>
 14
 </td>
 <td class='killed'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_14'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_14'>1</a>
 </td>
 <td class='covered'><pre><span  class='killed'>        return x;</span></pre></td></tr>
 
@@ -223,11 +223,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_15'/>
 15
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_15'></a>
 </td>
 <td class=''><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -235,11 +235,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_16'/>
 16
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_16'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -247,11 +247,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_17'/>
 17
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_17'></a>
 </td>
 <td class=''><pre><span  class=''>    public int getY() {</span></pre></td></tr>
 
@@ -259,11 +259,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_18'/>
 18
 </td>
 <td class='killed'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_18'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_18'>1</a>
 </td>
 <td class='covered'><pre><span  class='killed'>        return y;</span></pre></td></tr>
 
@@ -271,11 +271,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_19'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_19'/>
 19
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_19'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_19'></a>
 </td>
 <td class=''><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -283,11 +283,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_20'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_20'/>
 20
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_20'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_20'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -295,11 +295,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_21'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_21'/>
 21
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_21'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_21'></a>
 </td>
 <td class=''><pre><span  class=''>    public boolean osuu(Pala toinen) {</span></pre></td></tr>
 
@@ -307,11 +307,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_22'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_22'/>
 22
 </td>
 <td class='killed'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_22'>3</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_22'>3</a>
 </td>
 <td class='covered'><pre><span  class='killed'>        return x == toinen.x &#38;&#38; y == toinen.y;</span></pre></td></tr>
 
@@ -319,11 +319,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_23'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_23'/>
 23
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_23'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_23'></a>
 </td>
 <td class=''><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -331,11 +331,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_24'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_24'/>
 24
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_24'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_24'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -343,11 +343,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_25'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_25'/>
 25
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_25'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_25'></a>
 </td>
 <td class=''><pre><span  class=''>    public String toString() {</span></pre></td></tr>
 
@@ -355,11 +355,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_26'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_26'/>
 26
 </td>
 <td class='killed'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_26'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_26'>1</a>
 </td>
 <td class='covered'><pre><span  class='killed'>        return &#34;(&#34; + x + &#34;,&#34; + y + &#34;)&#34;;</span></pre></td></tr>
 
@@ -367,11 +367,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_27'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_27'/>
 27
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_27'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_27'></a>
 </td>
 <td class=''><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -379,11 +379,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c13170_28'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@7c0d633a_28'/>
 28
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_28'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_28'></a>
 </td>
 <td class=''><pre><span  class=''>}</span></pre></td></tr>
 
@@ -394,44 +394,44 @@ padding-left: 5px;
 
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6c13170_14'>14</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@7c0d633a_14'>14</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_14'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_14'/> 
 
 <p class='KILLED'>replaced return of integer sized value with (x == 0 ? 1 : 0) : KILLED -> kalastajapeli.domain.PalaTest.kalastajapeli.domain.PalaTest</p> 
 </td>
 </tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6c13170_18'>18</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@7c0d633a_18'>18</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_18'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_18'/> 
 
 <p class='KILLED'>replaced return of integer sized value with (x == 0 ? 1 : 0) : KILLED -> kalastajapeli.domain.PalaTest.kalastajapeli.domain.PalaTest</p> 
 </td>
 </tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6c13170_22'>22</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@7c0d633a_22'>22</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_22'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_22'/> 
 
 <p class='KILLED'>replaced return of integer sized value with (x == 0 ? 1 : 0) : KILLED -> kalastajapeli.domain.PalaTest.kalastajapeli.domain.PalaTest</p> <p class='KILLED'>negated conditional : KILLED -> kalastajapeli.domain.PalaTest.kalastajapeli.domain.PalaTest</p> <p class='KILLED'>negated conditional : KILLED -> kalastajapeli.domain.PalaTest.kalastajapeli.domain.PalaTest</p> 
 </td>
 </tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6c13170_26'>26</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@7c0d633a_26'>26</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6c13170_26'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@7c0d633a_26'/> 
 
 <p class='KILLED'>mutated return of Object value for kalastajapeli/domain/Pala::toString to ( if (x != null) null else throw new RuntimeException ) : KILLED -> kalastajapeli.domain.PalaTest.kalastajapeli.domain.PalaTest</p> 
 </td>
@@ -461,7 +461,7 @@ padding-left: 5px;
 
 <h2>Tests examined</h2>
 <ul>
-<li>kalastajapeli.domain.KalaTest.kalastajapeli.domain.KalaTest (42 ms)</li><li>kalastajapeli.domain.KalastajaTest.kalastajapeli.domain.KalastajaTest (12 ms)</li><li>kalastajapeli.peli.KalastajapeliTest.kalastajapeli.peli.KalastajapeliTest (14 ms)</li><li>kalastajapeli.domain.KenkaTest.kalastajapeli.domain.KenkaTest (5 ms)</li><li>kalastajapeli.domain.PalaTest.kalastajapeli.domain.PalaTest (3 ms)</li>
+<li>kalastajapeli.domain.KalaTest.kalastajapeli.domain.KalaTest (37 ms)</li><li>kalastajapeli.domain.KalastajaTest.kalastajapeli.domain.KalastajaTest (19 ms)</li><li>kalastajapeli.domain.KenkaTest.kalastajapeli.domain.KenkaTest (8 ms)</li><li>kalastajapeli.domain.PalaTest.kalastajapeli.domain.PalaTest (5 ms)</li>
 </ul>
 
 <br/>
