--- a/dokumentointi/pit/201502052216/kalastajapeli.domain/Kala.java.html
+++ b/dokumentointi/pit/201502052216/kalastajapeli.domain/Kala.java.html
@@ -55,11 +55,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_1'/>
 1
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_1'></a>
 </td>
 <td class=''><pre><span  class=''>package kalastajapeli.domain;</span></pre></td></tr>
 
@@ -67,11 +67,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_2'/>
 2
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_2'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -79,11 +79,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_3'/>
 3
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_3'></a>
 </td>
 <td class=''><pre><span  class=''>import kalastajapeli.kalastajapeli.Suunta;</span></pre></td></tr>
 
@@ -91,11 +91,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_4'/>
 4
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_4'></a>
 </td>
 <td class=''><pre><span  class=''>import java.util.ArrayList;</span></pre></td></tr>
 
@@ -103,11 +103,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_5'/>
 5
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_5'></a>
 </td>
 <td class=''><pre><span  class=''>import java.util.List;</span></pre></td></tr>
 
@@ -115,11 +115,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_6'/>
 6
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_6'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -127,11 +127,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_7'/>
 7
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_7'></a>
 </td>
 <td class=''><pre><span  class=''>public class Kala extends Pala {</span></pre></td></tr>
 
@@ -139,11 +139,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_8'/>
 8
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_8'></a>
 </td>
 <td class=''><pre><span  class=''>    private Suunta suunta;</span></pre></td></tr>
 
@@ -151,11 +151,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_9'/>
 9
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_9'></a>
 </td>
 <td class=''><pre><span  class=''>    private List&#60;Pala&#62; palat;</span></pre></td></tr>
 
@@ -163,11 +163,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_10'/>
 10
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_10'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -175,11 +175,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_11'/>
 11
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_11'></a>
 </td>
 <td class=''><pre><span  class=''>    public Kala(int x, int y, Suunta suunta) {</span></pre></td></tr>
 
@@ -187,11 +187,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_12'/>
 12
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_12'></a>
 </td>
 <td class='covered'><pre><span  class=''>        super(x, y);</span></pre></td></tr>
 
@@ -199,11 +199,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_13'/>
 13
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_13'></a>
 </td>
 <td class='covered'><pre><span  class=''>        this.suunta = Suunta.VASEN;</span></pre></td></tr>
 
@@ -211,11 +211,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_14'/>
 14
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_14'></a>
 </td>
 <td class='covered'><pre><span  class=''>        this.palat = new ArrayList&#60;Pala&#62;();</span></pre></td></tr>
 
@@ -223,11 +223,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_15'/>
 15
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_15'></a>
 </td>
 <td class='covered'><pre><span  class=''>        this.palat.add(new Pala(x, y));</span></pre></td></tr>
 
@@ -235,11 +235,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_16'/>
 16
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_16'></a>
 </td>
 <td class='covered'><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -247,11 +247,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_17'/>
 17
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_17'></a>
 </td>
 <td class=''><pre><span  class=''>    public void liiku() {</span></pre></td></tr>
 
@@ -259,11 +259,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_18'/>
 18
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_18'></a>
 </td>
 <td class=''><pre><span  class=''>        //int uusiX = palat.get(palat.size() - 1).getX();</span></pre></td></tr>
 
@@ -271,11 +271,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_19'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_19'/>
 19
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_19'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_19'></a>
 </td>
 <td class=''><pre><span  class=''>        //int uusiY = palat.get(palat.size() - 1).getY();</span></pre></td></tr>
 
@@ -283,11 +283,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_20'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_20'/>
 20
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_20'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_20'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -295,11 +295,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_21'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_21'/>
 21
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_21'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_21'></a>
 </td>
 <td class=''><pre><span  class=''>        //if (suunta == Suunta.VASEN) {</span></pre></td></tr>
 
@@ -307,11 +307,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_22'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_22'/>
 22
 </td>
 <td class='killed'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_22'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_22'>1</a>
 </td>
 <td class='covered'><pre><span  class='killed'>            x--;</span></pre></td></tr>
 
@@ -319,11 +319,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_23'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_23'/>
 23
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_23'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_23'></a>
 </td>
 <td class=''><pre><span  class=''>        //}</span></pre></td></tr>
 
@@ -331,11 +331,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_24'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_24'/>
 24
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_24'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_24'></a>
 </td>
 <td class=''><pre><span  class=''>        //palat.remove(0);</span></pre></td></tr>
 
@@ -343,11 +343,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_25'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_25'/>
 25
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_25'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_25'></a>
 </td>
 <td class='covered'><pre><span  class=''>        palat.add(new Pala(x, y));</span></pre></td></tr>
 
@@ -355,11 +355,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_26'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_26'/>
 26
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_26'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_26'></a>
 </td>
 <td class='covered'><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -367,11 +367,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_27'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_27'/>
 27
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_27'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_27'></a>
 </td>
 <td class=''><pre><span  class=''>    </span></pre></td></tr>
 
@@ -379,11 +379,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@694d7b0_28'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3a22d561_28'/>
 28
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_28'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_28'></a>
 </td>
 <td class=''><pre><span  class=''>}</span></pre></td></tr>
 
@@ -394,11 +394,11 @@ padding-left: 5px;
 
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@694d7b0_22'>22</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@3a22d561_22'>22</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@694d7b0_22'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@3a22d561_22'/> 
 
 <p class='KILLED'>Replaced integer subtraction with addition : KILLED -> kalastajapeli.domain.KalaTest.kalastajapeli.domain.KalaTest</p> 
 </td>
@@ -428,7 +428,7 @@ padding-left: 5px;
 
 <h2>Tests examined</h2>
 <ul>
-<li>kalastajapeli.domain.KalaTest.kalastajapeli.domain.KalaTest (42 ms)</li>
+<li>kalastajapeli.domain.KalaTest.kalastajapeli.domain.KalaTest (37 ms)</li>
 </ul>
 
 <br/>
