--- a/dokumentointi/pit/201502052216/kalastajapeli.peli/index.html
+++ b/dokumentointi/pit/201502052216/kalastajapeli.peli/index.html
@@ -61,7 +61,7 @@
 
 <h1>Pit Test Coverage Report</h1>
 <h2>Package Summary</h2>
-<h3>kalastajapeli.kalastajapeli</h3>
+<h3>kalastajapeli.peli</h3>
 <table>
     <thead>
         <tr>
@@ -73,8 +73,8 @@
     <tbody>
         <tr>
             <td>1</td>
-            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/12</div></div></td>
-            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/6</div></div></td>
+            <td>54% <div class="coverage_bar"><div class="coverage_complete" style="width:54%"></div><div class="coverage_ledgend">30/56</div></div></td>
+            <td>37% <div class="coverage_bar"><div class="coverage_complete" style="width:37%"></div><div class="coverage_ledgend">14/38</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -92,9 +92,9 @@
     <tbody>
 
         <tr>
-            <td><a href="./App.java.html">App.java</a></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/12</div></div></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/6</div></div></td>
+            <td><a href="./Kalastajapeli.java.html">Kalastajapeli.java</a></td>
+            <td><div class="coveragePercentage">54% </div><div class="coverage_bar"><div class="coverage_complete" style="width:54%"></div><div class="coverage_ledgend">30/56</div></div></td>
+            <td><div class="coveragePercentage">37% </div><div class="coverage_bar"><div class="coverage_complete" style="width:37%"></div><div class="coverage_ledgend">14/38</div></div></td>
         </tr>
 
      </tbody>
