--- a/dokumentointi/pit/201502052323/kalastajapeli.domain/Kenka.java.html
+++ b/dokumentointi/pit/201502052323/kalastajapeli.domain/Kenka.java.html
@@ -55,11 +55,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_1'/>
 1
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_1'></a>
 </td>
 <td class=''><pre><span  class=''>package kalastajapeli.domain;</span></pre></td></tr>
 
@@ -67,11 +67,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_2'/>
 2
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_2'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -79,11 +79,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_3'/>
 3
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_3'></a>
 </td>
 <td class=''><pre><span  class=''>import java.util.ArrayList;</span></pre></td></tr>
 
@@ -91,11 +91,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_4'/>
 4
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_4'></a>
 </td>
 <td class=''><pre><span  class=''>import kalastajapeli.kalastajapeli.Suunta;</span></pre></td></tr>
 
@@ -103,11 +103,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_5'/>
 5
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_5'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -115,11 +115,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_6'/>
 6
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_6'></a>
 </td>
 <td class=''><pre><span  class=''>public class Kenka extends Pala {</span></pre></td></tr>
 
@@ -127,11 +127,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_7'/>
 7
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_7'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -139,11 +139,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_8'/>
 8
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_8'></a>
 </td>
 <td class=''><pre><span  class=''>    private Suunta suunta;</span></pre></td></tr>
 
@@ -151,11 +151,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_9'/>
 9
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_9'></a>
 </td>
 <td class=''><pre><span  class=''>    private ArrayList&#60;Pala&#62; palat;</span></pre></td></tr>
 
@@ -163,11 +163,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_10'/>
 10
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_10'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -175,11 +175,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_11'/>
 11
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_11'></a>
 </td>
 <td class=''><pre><span  class=''>    public Kenka(int x, int y, Suunta suunta) {</span></pre></td></tr>
 
@@ -187,11 +187,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_12'/>
 12
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_12'></a>
 </td>
 <td class='covered'><pre><span  class=''>        super(x, y);</span></pre></td></tr>
 
@@ -199,11 +199,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_13'/>
 13
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_13'></a>
 </td>
 <td class='covered'><pre><span  class=''>        this.suunta = Suunta.VASEN;</span></pre></td></tr>
 
@@ -211,11 +211,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_14'/>
 14
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_14'></a>
 </td>
 <td class='covered'><pre><span  class=''>        this.palat = new ArrayList&#60;Pala&#62;();</span></pre></td></tr>
 
@@ -223,11 +223,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_15'/>
 15
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_15'></a>
 </td>
 <td class='covered'><pre><span  class=''>        this.palat.add(new Pala(x, y));</span></pre></td></tr>
 
@@ -235,11 +235,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_16'/>
 16
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_16'></a>
 </td>
 <td class='covered'><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -247,11 +247,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_17'/>
 17
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_17'></a>
 </td>
 <td class=''><pre><span  class=''>    </span></pre></td></tr>
 
@@ -259,11 +259,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_18'/>
 18
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_18'></a>
 </td>
 <td class=''><pre><span  class=''>    public Suunta getSuunta(){</span></pre></td></tr>
 
@@ -271,11 +271,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_19'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_19'/>
 19
 </td>
 <td class='killed'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_19'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_19'>1</a>
 </td>
 <td class='covered'><pre><span  class='killed'>        return suunta;</span></pre></td></tr>
 
@@ -283,11 +283,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_20'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_20'/>
 20
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_20'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_20'></a>
 </td>
 <td class=''><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -295,11 +295,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_21'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_21'/>
 21
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_21'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_21'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -307,11 +307,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_22'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_22'/>
 22
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_22'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_22'></a>
 </td>
 <td class=''><pre><span  class=''>    public void liiku() {</span></pre></td></tr>
 
@@ -319,11 +319,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_23'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_23'/>
 23
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_23'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_23'></a>
 </td>
 <td class=''><pre><span  class=''>        //int uusiX = palat.get(palat.size() - 1).getX();</span></pre></td></tr>
 
@@ -331,11 +331,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_24'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_24'/>
 24
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_24'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_24'></a>
 </td>
 <td class=''><pre><span  class=''>        //int uusiY = palat.get(palat.size() - 1).getY();</span></pre></td></tr>
 
@@ -343,11 +343,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_25'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_25'/>
 25
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_25'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_25'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -355,11 +355,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_26'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_26'/>
 26
 </td>
 <td class='killed'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_26'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_26'>1</a>
 </td>
 <td class='covered'><pre><span  class='killed'>        if (suunta == Suunta.VASEN) {</span></pre></td></tr>
 
@@ -367,11 +367,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_27'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_27'/>
 27
 </td>
 <td class='killed'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_27'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_27'>1</a>
 </td>
 <td class='covered'><pre><span  class='killed'>            x--;</span></pre></td></tr>
 
@@ -379,11 +379,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_28'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_28'/>
 28
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_28'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_28'></a>
 </td>
 <td class=''><pre><span  class=''>        }</span></pre></td></tr>
 
@@ -391,11 +391,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_29'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_29'/>
 29
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_29'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_29'></a>
 </td>
 <td class=''><pre><span  class=''>        //palat.remove(0);</span></pre></td></tr>
 
@@ -403,11 +403,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_30'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_30'/>
 30
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_30'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_30'></a>
 </td>
 <td class='covered'><pre><span  class=''>        palat.add(new Pala(x, y));</span></pre></td></tr>
 
@@ -415,11 +415,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_31'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_31'/>
 31
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_31'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_31'></a>
 </td>
 <td class='covered'><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -427,11 +427,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@43f10665_32'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@50a70099_32'/>
 32
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_32'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_32'></a>
 </td>
 <td class=''><pre><span  class=''>}</span></pre></td></tr>
 
@@ -442,33 +442,33 @@ padding-left: 5px;
 
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@43f10665_19'>19</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@50a70099_19'>19</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_19'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_19'/> 
 
 <p class='KILLED'>mutated return of Object value for kalastajapeli/domain/Kenka::getSuunta to ( if (x != null) null else throw new RuntimeException ) : KILLED -> kalastajapeli.domain.KenkaTest.kalastajapeli.domain.KenkaTest</p> 
 </td>
 </tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@43f10665_26'>26</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@50a70099_26'>26</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_26'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_26'/> 
 
 <p class='KILLED'>negated conditional : KILLED -> kalastajapeli.domain.KenkaTest.kalastajapeli.domain.KenkaTest</p> 
 </td>
 </tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@43f10665_27'>27</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@50a70099_27'>27</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@43f10665_27'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@50a70099_27'/> 
 
 <p class='KILLED'>Replaced integer subtraction with addition : KILLED -> kalastajapeli.domain.KenkaTest.kalastajapeli.domain.KenkaTest</p> 
 </td>
@@ -498,7 +498,7 @@ padding-left: 5px;
 
 <h2>Tests examined</h2>
 <ul>
-<li>kalastajapeli.domain.KenkaTest.kalastajapeli.domain.KenkaTest (8 ms)</li>
+<li>kalastajapeli.domain.KenkaTest.kalastajapeli.domain.KenkaTest (7 ms)</li>
 </ul>
 
 <br/>
